memory optimizations.